--- a/public/data/ERROR/React-Note/react_error_22-11.mdx
+++ b/public/data/ERROR/React-Note/react_error_22-11.mdx
@@ -1,6 +1,4 @@
-# ERROR NOTE - React (2022년 11월)
-
-- <a href="https://sylagape1231.tistory.com/59">md 문서 링크 바로가기</a>
+# ERROR NOTE - React
 
 ### [22.11.04] DOM에 직접 접근하여 classList 메소드를 통해 클래스를 추가하고 제거했더니 정상적으로 동작하지 않는다.
 
@@ -83,7 +81,7 @@ export default ListItem;
 <br />
 
 - <strong>해결</strong> : 상수 데이터 배열에 <code>forEach</code> 메소드가 아닌 <code>
-  map
+    map
   </code> 메소드를 사용해주면 된다.
 
   ```js
@@ -113,7 +111,7 @@ export default ListItem;
 ### [22.11.18] 슬라이더를 리엑트로 구현하였는데, 처음에 시간 간격에 따라 페이지가 이동할 때 화면에 사진이 사라져버렸다.
 
 - <strong>원인</strong> : <code>slideLength</code> 값 (<code>
-  sliderData.length
+    sliderData.length
   </code>)에 정상적으로 값이 나오지 않고 0이 찍힌다.
 
   - 0이 찍힌 이유는 useState 문제인 줄 알았는데, 아니었던 것 같다. 정확한 원인을 파악하지 못한 채 문제 해결
@@ -460,7 +458,7 @@ const ReservationPage = () => {
 - <strong>해결</strong> : 백에서 받아온 데이터를 구조 분해 할당 시 index로 접근하지
   않도록 한다. 만일 꼭 index로 접근해야만 하는 상황이라면
   <strong>
-  setState의 Modifier 함수 인자 내부에서 (index로) 접근해주면 된다.
+    setState의 Modifier 함수 인자 내부에서 (index로) 접근해주면 된다.
   </strong>
 
   ```js
@@ -496,16 +494,51 @@ const ReservationPage = () => {
 <br />
 <br />
 
-<!-- #### (문제) [22.00.00(날짜)]
+### (문제) [22.12.09(날짜)] 토스 페이먼츠 api를 활용한 결제 기능 구현 중 axios를 읽지 못하는 문제
 
-- <strong>원인</strong> :
+```js
+useEffect(() => {
+  let axios = require('axios').default;
 
-- <strong>해결</strong> :
+  let options = {
+    method: 'POST',
+    url: 'https://api.tosspayments.com/v1/payments/confirm',
+    headers: {
+      Authorization:
+        'Basic dGVzdF9za183WFpZa0tMNE1yak9uWjdaTVIxODB6SndsRVdSOg==',
+      'Content-Type': 'application/json',
+    },
+    data: {
+      paymentKey: paymentKey,
+      amount: amount,
+      orderId: order,
+    },
+  };
 
-<br/><br/> -->
+  axios
+    .request(options)
+    .then(function (response) {
+      console.log(response);
+    })
+    .catch(function (error) {
+      console.error(error);
+    });
+});
+```
 
-<!-- #### (문제) [22.00.00(날짜)]
+- 위의 코드는 결제 승인 요청을 토스 페이먼트 서버에 요청하는 코드이다.
 
-- <a href="">블로그 포스트로 작성</a>
+- 그러나 <code>axios</code>가 불러와지질 않아 승인 요청이 정상적으로 이루어지지 않았다.
 
-<br/><br/> -->
+<br />
+
+- <strong>원인</strong> : <strong>버전이 맞지 않아서</strong> 발생한 문제였다.. (이틀동안
+  고생했는데 허무..)
+
+<br />
+
+- <strong>해결</strong> : <code>axios</code>의 버전을 1.0.0으로 다운 그레이드한
+  후 다시 진행해보니 정상적으로 작동했다.
+
+<br />
+<br />
